# mccellpose

./: .gitignore  Dockerfile  LICENSE  README.md  cellpose-large-img.py  pyproject.toml
mccellpose/: cli.py
