[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "mccellpose"
dynamic = ["version"]
dependencies = [
    "cellpose>=4.0.7",
    "dask",
    "pint",
    "ome_types",
    "scikit-image>=0.26",
    "scikit-learn",
    "threadpoolctl",
    "tifffile",
    "tqdm",
    "zarr",
    "numpy",
]

[project.scripts]
mccellpose = "mccellpose.cli:main"

[tool.setuptools]
packages = ["mccellpose"]

[tool.setuptools_scm]
version_file = "mccellpose/_version.py"
